<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Urban\nAlphabets</string>
    <string name="name">Name:</string>
    <string name="hint_name">(name)</string>
    <string name="language">Language:</string>
    <string name="add_new_alphabet">Add new alphabet</string>
    <string name="change">(change)</string>
    <string name="reset_alphabet">Reset Alphabet</string>
    <string name="delete_alphabet">Delete Alphabet</string>
    <string name="welcome">Welcome</string>
    <string name="default_language">Default\nLanguage:</string>
    <string name="location">Enable location</string>
    <string name="username">Username:</string>
    <string name="username_message">Please enter a username:</string>
    <string name="cancel">Cancel</string>
    <string name="enter_username">Enter username</string>
    <string name="ok">OK</string>
    <string name="alphabet_info_cap">Alphabet Info</string>
    <string name="alphabet_info">Alphabet info</string>
    <string name="share_alphabet">Share alphabet</string>
    <string name="share_postcard">Share postcard</string>
    <string name="save_postcard">Save postcard</string>
    <string name="write_postcard_cap">Write Postcard</string>
    <string name="write_postcard">Write postcard</string>
    <string name="save_alphabet">Save alphabet</string>
    <string name="my_alphabets_cap">My Alphabets</string>
    <string name="my_alphabets">My alphabets</string>
    <string name="settings_cap">Settings</string>
    <string name="settings">Settings</string>
    <string name="save_on_device">Save on this device</string>
    <string name="change_default_language">Change Default Language</string>
    <string name="change_language_cap">Change Language</string>
    <string name="change_language">Change language</string>
    <string name="assign_letter_cap">Assign Letter</string>
    <string name="assign_letter">Assign letter</string>
    <string name="crop_photo_cap">Crop Photo</string>
    <string name="crop_photo">Crop photo</string>
    <string name="add_alphabet_cap">Add Alphabet</string>
    <string name="add_alphabet">Add alphabet</string>
    <string name="view_letter_cap">View Letter</string>
    <string name="view_letter">View letter</string>
    <string name="take_photo_cap">Take Photo</string>
    <string name="take_photo">Take photo</string>
    <string name="description">image_description</string>
    <string name="update">Update</string>
    <string name="share">Share</string>

</resources>