<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.susemiessner.android.urbanalphabets.MainActivity" >

    <item
        android:id="@+id/item_alphabet_info"
        android:title="@string/alphabet_info"/>
    <item
        android:id="@+id/item_share_alphabet"
        android:title="@string/share_alphabet"/>
    <item
        android:id="@+id/item_save_alphabet"
        android:title="@string/save_alphabet"/>
    <item
        android:id="@+id/item_write_postcard"
        android:title="@string/write_postcard"/>
    <item
        android:id="@+id/item_my_alphabets"
        android:title="@string/my_alphabets"/>
    <item
        android:id="@+id/item_settings"
        android:title="@string/settings"/>

</menu>