<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_add_alphabet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <TextView
            android:id="@+id/textView_alphabet_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText_alphabet_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/textView_alphabet_name"
            android:layout_toRightOf="@+id/textView_alphabet_name"
            android:ems="10"
            android:hint="@string/hint_name"
            android:imeOptions="actionDone"
            android:inputType="text" >

            <requestFocus />
        </EditText>
    </RelativeLayout>

    <TextView
        android:id="@+id/textView_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:text="@string/language"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/listView_add_alphabet"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1" >
    </ListView>

    <ImageButton
        android:id="@+id/imageButton_add_alphabet"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:background="@drawable/ok_big"
        android:contentDescription="@string/description"
        android:onClick="addAlphabet"
        android:visibility="gone" />

</LinearLayout>