<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView_alphabet_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_alphabet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textView_alphabet_label"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@id/textView_alphabet_label"
        android:layout_toRightOf="@id/textView_alphabet_label"
        android:clickable="true"
        android:onClick="changeAlphabet"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText_alphabet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textView_alphabet_label"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@id/textView_alphabet_label"
        android:layout_toRightOf="@id/textView_alphabet_label"
        android:ems="10"
        android:inputType="text"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView_change_alphabet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_alphabet_label"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/textView_alphabet_label"
        android:layout_toRightOf="@id/textView_alphabet_label"
        android:background="@drawable/selection"
        android:clickable="true"
        android:onClick="changeAlphabet"
        android:text="@string/change"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_language_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/textView_change_alphabet"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/language"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textView_language_label"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/textView_language_label"
        android:layout_toRightOf="@id/textView_language_label"
        android:clickable="true"
        android:onClick="changeLanguage"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView_change_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_language_label"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/textView_language_label"
        android:layout_toRightOf="@id/textView_language_label"
        android:background="@drawable/selection"
        android:clickable="true"
        android:onClick="changeLanguage"
        android:text="@string/change"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_reset_alphabet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/textView_change_language"
        android:layout_marginTop="50dp"
        android:background="@drawable/selection"
        android:clickable="true"
        android:onClick="resetAlphabet"
        android:paddingBottom="5dp"
        android:paddingEnd="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:text="@string/reset_alphabet"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_delete_alphabet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/textView_reset_alphabet"
        android:layout_marginTop="10dp"
        android:background="@drawable/selection"
        android:clickable="true"
        android:onClick="deleteAlphabet"
        android:paddingBottom="5dp"
        android:paddingEnd="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:text="@string/delete_alphabet"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>