<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView_username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/FontGrey" />

    <TextView
        android:id="@+id/textView_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textView_username_label"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@id/textView_username_label"
        android:layout_toRightOf="@id/textView_username_label"
        android:clickable="true"
        android:onClick="changeUsername"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textView_username_label"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@id/textView_username_label"
        android:layout_toRightOf="@id/textView_username_label"
        android:ems="10"
        android:inputType="text"
        android:visibility="gone" >
    </EditText>

    <TextView
        android:id="@+id/textView_change_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_username_label"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/textView_username_label"
        android:layout_toRightOf="@id/textView_username_label"
        android:background="@drawable/selection"
        android:clickable="true"
        android:onClick="changeUsername"
        android:paddingBottom="5dp"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:text="@string/change"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/FontGrey" />

    <TextView
        android:id="@+id/textView_default_language_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView_change_username"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/default_language"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/FontGrey" />

    <TextView
        android:id="@+id/textView_default_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView_default_language_label"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/textView_default_language_label"
        android:layout_toRightOf="@id/textView_default_language_label"
        android:clickable="true"
        android:onClick="changeDefaultLanguage"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView_change_default_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_default_language_label"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/textView_default_language_label"
        android:layout_toRightOf="@id/textView_default_language_label"
        android:background="@drawable/selection"
        android:clickable="true"
        android:onClick="changeDefaultLanguage"
        android:paddingBottom="5dp"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:text="@string/change"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/FontGrey" />

    <CheckBox
        android:id="@+id/checkBox_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView_change_default_language"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:onClick="enableLocation"
        android:text="@string/location"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton
        android:id="@+id/imageButton_settings_ok"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ok_big"
        android:contentDescription="@string/description"
        android:onClick="onOk" />

</RelativeLayout>